# pacman-fix-permissions

./: .bumpversion  .bumpversion.cfg  Makefile  README.md  pacman-fix-permissions  pylintrc  pyproject.toml
.github/workflows/: master.yml
src/pacman_fix_permissions/: __init__.py
tests/test_pacman_fix_permissions/: __init__.py
