[tool.poetry]
name = "pacman-fix-permissions"
version = "1.1.0"
description = "fix broken filesystem permissions"
authors = ["Lev Gorodetskiy <github@droserasprout.space>"]
license = "GPL-3.0-only"

packages = [
    { include = "pacman_fix_permissions", from = "src" },
]

[tool.poetry.scripts]
pacman-fix-permissions = 'pacman_fix_permissions:__main__'

[tool.poetry.dependencies]
python = "^3.6"
zstandard = "^0.15.1"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
bump2version = "^1.0.1"
flakehell = "^0.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
