[tool.poetry]
name = "pacman-fix-permissions"
version = "1.1.2"
description = "Fix broken filesystem permissions"
authors = ["Lev Gorodetskiy <github@droserasprout.space>"]
readme = "README.md"
homepage = "https://github.com/droserasprout/pacman-fix-permissions"
repository = "https://github.com/droserasprout/pacman-fix-permissions"
packages = [
    { include = "pacman_fix_permissions", from = "src" },
]

[tool.poetry.scripts]
pacman-fix-permissions = 'pacman_fix_permissions:__main__'

[tool.poetry.dependencies]
python = "^3.6"
zstandard = "^0.15.1"

[tool.poetry.dev-dependencies]
bump2version = "^1.0"
coverage = "^5.1"
isort = {version = "^4.3", extras = ["pyproject"]}
mypy = "0.*"
nose = "^1.3"
nose-timer = "^1.0"
pylint = "^2.6.0"
pylint-exit = "^1.2.0"
black = "^20.8b1"

[tool.poetry.extras]
tortoise = ["tortoise-orm"]

[tool.nosetests]
verbosity = 2

[tool.isort]
force_single_line = true
line_length = 140

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
