[tool.poetry]
name = "pacman-fix-permissions"
version = "1.1.2"
description = "Fix broken filesystem permissions"
authors = ["Lev Gorodetskiy <github@droserasprout.space>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/droserasprout/pacman-fix-permissions"
repository = "https://github.com/droserasprout/pacman-fix-permissions"
packages = [
    { include = "pacman_fix_permissions", from = "src" },
]

[tool.poetry.scripts]
pacman-fix-permissions = 'pacman_fix_permissions:__main__'

[tool.poetry.dependencies]
python = "^3.6"
zstandard = "^0.18.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"

[tool.isort]
force_single_line = true
line_length = 140

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
